--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,57 @@ body {
 a {
   color: #00b7ff;
 }
+
+.list-container {
+  display: flex;
+  width: 70%;
+  height: 50vh;
+  margin: 0 15%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+th {
+  width: 180px;
+  height: 40px;
+  color: white;
+  background-color: grey;
+  border-radius: 5px;
+}
+
+td:last-of-type {
+  width: 250px;
+  text-align: unset;
+}
+
+td {
+  text-align: center;
+}
+
+#action-button {
+  text-decoration: none;
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 5px 10px;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  border-radius: 8px;
+  background-color: rgb(204, 204, 204);
+  color: white;
+  margin: 5px 0;
+  text-align: center;
+  max-width: 300px;
+}
+
+#add-button {
+  font-size: 2rem;
+  border-radius: 8px;
+  background-color: rgb(204, 204, 204);
+  color: white;
+  padding: 10px 30px;
+  text-decoration: none;
+}
